Fix layout on mobile
- add back the navbar-default class so that the "toggle navigation" button shows pu
- add CSS rules so that class doesn't mess up our styling too much
- switch to fluid container instead of fixed-width
- add rules so that the fluid container acts more like a fixed width one on
  bigger screens
- add 'img-responsive' class to images, so they size correctly in the fluid
  container

Reviewed-on: http://gerrit.cloudera.org:8080/1063
Tested-by: Misty Stanley-Jones <misty@apache.org>

--- a/css/kudu.css
+++ b/css/kudu.css
@@ -43,6 +43,14 @@
     margin: auto;
 }
 
+.navbar-default {
+    background-color: #fff;
+    border: none;
+}
+.navbar-default .navbar-nav>.active>a {
+    background-color: #fff;
+}
+
 nav:after {
     display: block;
     clear: both;
@@ -86,3 +94,14 @@ nav li.active a:hover {
 .faq dl dd p:last-child {
     margin: 0;
 }
+
+@media (min-width: 768px) { .container-fluid {
+  width: 750px
+} }
+@media (min-width: 992px) { .container-fluid {
+  width: 970px
+} }
+
+@media (min-width: 1200px) { .container-fluid {
+  width: 1170px
+} }
